Changes to squid-1.1.3 (January 7, 1997):

	- Changed inet_addr("X") to inet_addr("255.255.255.255")
	  (Dan Riley).
	- Fixed matchInsideFirewall() bug when using 'firewall_ip' but
	  not 'inside_firewall' (Tai Jin).
	- check for text == NULL in icpSendERROR().
	- Don't make inaddr_none static in ftpget.c (Davide Migliavacca).
	- Fixed ipcache FMR bug for long-pending requests.
	- Fixes for NeXTSTEP 3.3 (Tethpub Znek).
	- add storeWriteCleanLog() call in fatal().

Changes to squid-1.1.2 (December 18, 1996):

	- Fixed (negative) caching of HTTP objects witch consist of
	  only some HTTP headers.
	- Fixed up SSL neighbor selection algorithm to be just
	  like the one in pass.c.
	- Fixed incorrect squid.conf comment about setting an objcache
	  password to 'none'.  Added keyword 'disable' to disable an
	  objcache function (Markus Gyger).
	- Further Cache.Announce.on fixes (Ernest Yik).
	- Add theOutIcpConnection to comm_select_incoming() for improved
	  ICP performance (Stewart Forster).
	- Added access.log documentation to Release-Notes-1.1.txt
	- Added support for TRACE method.
	- Added 'log_icp_queries on|off' to config (David Luyer).
	- Added hierarchy tag to common HTTP format access.log (David Luyer).
	- Moved second SQUID_MAXFD/FD_SETSIZE check to after #includes.
	- Added reverse DNS lookups for 'dstdomain' ACLs when the URL
	  contains an IP address.
	- Made HTTP reply header parsing more robust to deal with
	  bad 304 replies from squid-1.1.beta27 and earlier.
	- Changed reqnum passed in ICP replies to encode request method
	  in high byte.
	- Fixed neighbor round-robin bug (Uwe Doering).
	- Calculate accurage percentages for ICP and HTTP requests in
	  cachemgr 'client list'.
	- Fixed refresh lm-factor calculations to allow percent = 0.
	- Make sure DNS lookups don't remain PENDING for a very long time.

Changes to squid-1.1.1 (December 15, 1996):

	- Fixed announcement bug.  Announcements were always off unless
	  a file was specified.