@@ -1,5 +1,5 @@
 /*
- * $Id: debug.cc,v 1.39 1997/01/03 22:59:15 wessels Exp $
+ * $Id: debug.cc,v 1.40 1997/01/07 20:05:42 wessels Exp $
  *
  * DEBUG: section 0     Debug Routines
  * AUTHOR: Harvest Derived
@@ -105,9 +105,6 @@
 
 #include "squid.h"
 
-const char *volatile _db_file = __FILE__;
-volatile int _db_line = 0;
-
 FILE *debug_log = NULL;
 static char *debug_log_file = NULL;
 static const char *const w_space = " \t\n\r";
@@ -137,34 +134,26 @@ _db_print(va_alist)
     LOCAL_ARRAY(char, tmpbuf, BUFSIZ);
 #endif
 
-    if (debug_log == NULL)
-	return;
-
 #ifdef __STDC__
+    if (level > debugLevels[section])
+	return;
     va_start(args, format);
 #else
     va_start(args);
     section = va_arg(args, int);
     level = va_arg(args, int);
-    format = va_arg(args, const char *);
-#endif
-
     if (level > debugLevels[section]) {
 	va_end(args);
 	return;
     }
-#ifdef LOG_FILE_AND_LINE
-    sprintf(f, "%s %-10.10s %4d| %s",
-	accessLogTime(squid_curtime),
-	_db_file,
-	_db_line,
-	format);
-#else
+    format = va_arg(args, const char *);
+#endif
+
+    if (debug_log == NULL)
+	return;
     sprintf(f, "%s| %s",
 	accessLogTime(squid_curtime),
 	format);
-#endif
-
 #if HAVE_SYSLOG
     /* level 0 go to syslog */
     if (level == 0 && opt_syslog_enable) {
@@ -174,7 +163,6 @@ _db_print(va_alist)
 	syslog(LOG_ERR, "%s", tmpbuf);
     }
 #endif /* HAVE_SYSLOG */
-
     /* write to log file */
     vfprintf(debug_log, f, args);
     if (unbuffered_logs)
